cs131-chocopy3/src/parser/chocopy.output
Grammar

    0 $accept: program $end

    1 program: var_def program
    2        | func_def program
    3        | class_def program
    4        | stmt_list

    5 stmt_list: %empty
    6          | stmt stmt_list

    7 class_def: TOKEN_CLASS identifier TOKEN_l_paren identifier TOKEN_r_paren TOKEN_colon TOKEN_NEWLINE TOKEN_INDENT class_helper TOKEN_DEDENT

    8 class_helper: TOKEN_PASS TOKEN_NEWLINE
    9             | var_def
   10             | func_def
   11             | class_helper var_def
   12             | class_helper func_def

   13 func_def: TOKEN_DEF identifier TOKEN_l_paren typed_var_list TOKEN_r_paren TOKEN_rarrow type TOKEN_colon TOKEN_NEWLINE TOKEN_INDENT declaration_list stmt stmt_list TOKEN_DEDENT
   14         | TOKEN_DEF identifier TOKEN_l_paren typed_var_list TOKEN_r_paren TOKEN_colon TOKEN_NEWLINE TOKEN_INDENT declaration_list stmt stmt_list TOKEN_DEDENT

   15 typed_var_list: %empty
   16               | typed_var
   17               | typed_var_list TOKEN_comma typed_var

   18 declaration_list: %empty
   19                 | declaration_list global_decl
   20                 | declaration_list nonlocal_decl
   21                 | declaration_list var_def
   22                 | declaration_list func_def

   23 typed_var: identifier TOKEN_colon type

   24 identifier: TOKEN_IDENTIFIER

   25 type: identifier
   26     | TOKEN_IDSTRING
   27     | TOKEN_l_square type TOKEN_r_square

   28 global_decl: TOKEN_GLOBAL identifier TOKEN_NEWLINE

   29 nonlocal_decl: TOKEN_NONLOCAL identifier TOKEN_NEWLINE

   30 var_def: typed_var TOKEN_equal literal TOKEN_NEWLINE

   31 stmt: expr_stmt TOKEN_NEWLINE
   32     | TOKEN_IF expr TOKEN_colon block elif_list
   33     | TOKEN_IF expr TOKEN_colon block TOKEN_ELSE TOKEN_colon block
   34     | TOKEN_WHILE expr TOKEN_colon block
   35     | TOKEN_FOR identifier TOKEN_IN expr TOKEN_colon block
   36     | varAssignStmt TOKEN_NEWLINE
   37     | memberAssignStmt TOKEN_NEWLINE
   38     | indexAssignStmt TOKEN_NEWLINE

   39 elif_list: %empty
   40          | TOKEN_ELIF expr TOKEN_colon block elif_list
   41          | TOKEN_ELIF expr TOKEN_colon block TOKEN_ELSE TOKEN_colon block

   42 expr_stmt: TOKEN_PASS
   43          | expr
   44          | TOKEN_RETURN
   45          | TOKEN_RETURN expr

   46 varAssignStmt: identifier TOKEN_equal assign_expr
   47              | identifier TOKEN_equal expr

   48 memberAssignStmt: member_expr TOKEN_equal assign_expr
   49                 | member_expr TOKEN_equal expr

   50 indexAssignStmt: index_expr TOKEN_equal assign_expr
   51                | index_expr TOKEN_equal expr

   52 assign_expr: varAssignExpr
   53            | memberAssignExpr
   54            | indexAssignExpr

   55 varAssignExpr: identifier TOKEN_equal assign_expr
   56              | identifier TOKEN_equal expr

   57 memberAssignExpr: member_expr TOKEN_equal assign_expr
   58                 | member_expr TOKEN_equal expr

   59 indexAssignExpr: index_expr TOKEN_equal assign_expr
   60                | index_expr TOKEN_equal expr

   61 block: TOKEN_NEWLINE TOKEN_INDENT stmt stmt_list TOKEN_DEDENT

   62 literal: TOKEN_NONE
   63        | TOKEN_TRUE
   64        | TOKEN_FALSE
   65        | TOKEN_INTEGER
   66        | TOKEN_IDSTRING
   67        | TOKEN_STRING

   68 expr: cexpr
   69     | TOKEN_NOT expr
   70     | binary_expr
   71     | expr TOKEN_IF expr TOKEN_ELSE expr

   72 binary_expr: expr TOKEN_AND expr
   73            | expr TOKEN_OR expr

   74 cexpr: identifier
   75      | literal
   76      | TOKEN_l_square list_expr TOKEN_r_square
   77      | TOKEN_l_paren expr TOKEN_r_paren
   78      | member_expr
   79      | index_expr
   80      | member_expr TOKEN_l_paren list_expr TOKEN_r_paren
   81      | identifier TOKEN_l_paren list_expr TOKEN_r_paren
   82      | cexpr TOKEN_plus cexpr
   83      | cexpr TOKEN_minus cexpr
   84      | cexpr TOKEN_star cexpr
   85      | cexpr TOKEN_slash cexpr
   86      | cexpr TOKEN_percent cexpr
   87      | cexpr TOKEN_equalequal cexpr
   88      | cexpr TOKEN_exclaimequal cexpr
   89      | cexpr TOKEN_lessequal cexpr
   90      | cexpr TOKEN_greaterequal cexpr
   91      | cexpr TOKEN_less cexpr
   92      | cexpr TOKEN_greater cexpr
   93      | cexpr TOKEN_IS cexpr
   94      | TOKEN_minus cexpr

   95 list_expr: %empty
   96          | expr
   97          | list_expr TOKEN_comma expr

   98 member_expr: cexpr TOKEN_period identifier

   99 index_expr: cexpr TOKEN_l_square expr TOKEN_r_square


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_INTEGER <raw_int> (258) 65
    TOKEN_IDENTIFIER <raw_str> (259) 24
    TOKEN_STRING <raw_str> (260) 67
    TOKEN_IDSTRING <raw_str> (261) 26 66
    TOKEN_TRUE <raw_str> (262) 63
    TOKEN_FALSE <raw_str> (263) 64
    TOKEN_AND <raw_str> (264) 72
    TOKEN_DEF <raw_str> (265) 13 14
    TOKEN_ELIF <raw_str> (266) 40 41
    TOKEN_ELSE <raw_str> (267) 33 41 71
    TOKEN_FOR <raw_str> (268) 35
    TOKEN_IF <raw_str> (269) 32 33 71
    TOKEN_NOT <raw_str> (270) 69
    TOKEN_OR <raw_str> (271) 73
    TOKEN_RETURN <raw_str> (272) 44 45
    TOKEN_WHILE <raw_str> (273) 34
    TOKEN_NONE <raw_str> (274) 62
    TOKEN_CLASS <raw_str> (275) 7
    TOKEN_GLOBAL <raw_str> (276) 28
    TOKEN_IN <raw_str> (277) 35
    TOKEN_IS <raw_str> (278) 93
    TOKEN_NONLOCAL <raw_str> (279) 29
    TOKEN_PASS <raw_str> (280) 8 42
    TOKEN_plus <raw_str> (281) 82
    TOKEN_minus <raw_str> (282) 83 94
    TOKEN_star <raw_str> (283) 84
    TOKEN_slash <raw_str> (284) 85
    TOKEN_percent <raw_str> (285) 86
    TOKEN_less <raw_str> (286) 91
    TOKEN_greater <raw_str> (287) 92
    TOKEN_lessequal <raw_str> (288) 89
    TOKEN_greaterequal <raw_str> (289) 90
    TOKEN_equalequal <raw_str> (290) 87
    TOKEN_exclaimequal <raw_str> (291) 88
    TOKEN_equal <raw_str> (292) 30 46 47 48 49 50 51 55 56 57 58 59 60
    TOKEN_l_paren <raw_str> (293) 7 13 14 77 80 81
    TOKEN_r_paren <raw_str> (294) 7 13 14 77 80 81
    TOKEN_l_square <raw_str> (295) 27 76 99
    TOKEN_r_square <raw_str> (296) 27 76 99
    TOKEN_comma <raw_str> (297) 17 97
    TOKEN_colon <raw_str> (298) 7 13 14 23 32 33 34 35 40 41
    TOKEN_period <raw_str> (299) 98
    TOKEN_rarrow <raw_str> (300) 13
    TOKEN_INDENT (301) 7 13 14 61
    TOKEN_DEDENT (302) 7 13 14 61
    TOKEN_NEWLINE (303) 7 8 13 14 28 29 30 31 36 37 38 61


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program <PtrProgram> (50)
        on left: 1 2 3 4
        on right: 0 1 2 3
    stmt_list <PtrListStmt> (51)
        on left: 5 6
        on right: 4 6 13 14 61
    class_def <PtrClassDef> (52)
        on left: 7
        on right: 3
    class_helper <PtrListDecl> (53)
        on left: 8 9 10 11 12
        on right: 7 11 12
    func_def <PtrFuncDef> (54)
        on left: 13 14
        on right: 2 10 12 22
    typed_var_list <PtrListTypedVar> (55)
        on left: 15 16 17
        on right: 13 14 17
    declaration_list <PtrListDecl> (56)
        on left: 18 19 20 21 22
        on right: 13 14 19 20 21 22
    typed_var <PtrTypedVar> (57)
        on left: 23
        on right: 16 17 30
    identifier <PtrIdent> (58)
        on left: 24
        on right: 7 13 14 23 25 28 29 35 46 47 55 56 74 81 98
    type <PtrTypeAnnotation> (59)
        on left: 25 26 27
        on right: 13 23 27
    global_decl <PtrGlobalDecl> (60)
        on left: 28
        on right: 19
    nonlocal_decl <PtrNonlocalDecl> (61)
        on left: 29
        on right: 20
    var_def <PtrVarDef> (62)
        on left: 30
        on right: 1 9 11 21
    stmt <PtrStmt> (63)
        on left: 31 32 33 34 35 36 37 38
        on right: 6 13 14 61
    elif_list <PtrIfStmt> (64)
        on left: 39 40 41
        on right: 32 40
    expr_stmt <PtrStmt> (65)
        on left: 42 43 44 45
        on right: 31
    varAssignStmt <PtrVarAssignStmt> (66)
        on left: 46 47
        on right: 36
    memberAssignStmt <PtrMemberAssignStmt> (67)
        on left: 48 49
        on right: 37
    indexAssignStmt <PtrIndexAssignStmt> (68)
        on left: 50 51
        on right: 38
    assign_expr <PtrExpr> (69)
        on left: 52 53 54
        on right: 46 48 50 55 57 59
    varAssignExpr <PtrVarAssignExpr> (70)
        on left: 55 56
        on right: 52
    memberAssignExpr <PtrMemberAssignExpr> (71)
        on left: 57 58
        on right: 53
    indexAssignExpr <PtrIndexAssignExpr> (72)
        on left: 59 60
        on right: 54
    block <PtrListStmt> (73)
        on left: 61
        on right: 32 33 34 35 40 41
    literal <PtrLiteral> (74)
        on left: 62 63 64 65 66 67
        on right: 30 75
    expr <PtrExpr> (75)
        on left: 68 69 70 71
        on right: 32 33 34 35 40 41 43 45 47 49 51 56 58 60 69 71 72 73 77 96 97 99
    binary_expr <PtrExpr> (76)
        on left: 72 73
        on right: 70
    cexpr <PtrExpr> (77)
        on left: 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94
        on right: 68 82 83 84 85 86 87 88 89 90 91 92 93 94 98 99
    list_expr <PtrListExpr> (78)
        on left: 95 96 97
        on right: 76 80 81 97
    member_expr <PtrMemberExpr> (79)
        on left: 98
        on right: 48 49 57 58 78 80
    index_expr <PtrIndexExpr> (80)
        on left: 99
        on right: 50 51 59 60 79


State 0

    0 $accept: . program $end

    TOKEN_INTEGER     shift, and go to state 1
    TOKEN_IDENTIFIER  shift, and go to state 2
    TOKEN_STRING      shift, and go to state 3
    TOKEN_IDSTRING    shift, and go to state 4
    TOKEN_TRUE        shift, and go to state 5
    TOKEN_FALSE       shift, and go to state 6
    TOKEN_DEF         shift, and go to state 7
    TOKEN_FOR         shift, and go to state 8
    TOKEN_IF          shift, and go to state 9
    TOKEN_NOT         shift, and go to state 10
    TOKEN_RETURN      shift, and go to state 11
    TOKEN_WHILE       shift, and go to state 12
    TOKEN_NONE        shift, and go to state 13
    TOKEN_CLASS       shift, and go to state 14
    TOKEN_PASS        shift, and go to state 15
    TOKEN_minus       shift, and go to state 16
    TOKEN_l_paren     shift, and go to state 17
    TOKEN_l_square    shift, and go to state 18

    $default  reduce using rule 5 (stmt_list)

    program           go to state 19
    stmt_list         go to state 20
    class_def         go to state 21
    func_def          go to state 22
    typed_var         go to state 23
    identifier        go to state 24
    var_def           go to state 25
    stmt              go to state 26
    expr_stmt         go to state 27
    varAssignStmt     go to state 28
    memberAssignStmt  go to state 29
    indexAssignStmt   go to state 30
    literal           go to state 31
    expr              go to state 32
    binary_expr       go to state 33
    cexpr             go to state 34
    member_expr       go to state 35
    index_expr        go to state 36


State 1

   65 literal: TOKEN_INTEGER .

    $default  reduce using rule 65 (literal)


State 2

   24 identifier: TOKEN_IDENTIFIER .

    $default  reduce using rule 24 (identifier)


State 3

   67 literal: TOKEN_STRING .

    $default  reduce using rule 67 (literal)


State 4

   66 literal: TOKEN_IDSTRING .

    $default  reduce using rule 66 (literal)


State 5

   63 literal: TOKEN_TRUE .

    $default  reduce using rule 63 (literal)


State 6

   64 literal: TOKEN_FALSE .

    $default  reduce using rule 64 (literal)


State 7

   13 func_def: TOKEN_DEF . identifier TOKEN_l_paren typed_var_list TOKEN_r_paren TOKEN_rarrow type TOKEN_colon TOKEN_NEWLINE TOKEN_INDENT declaration_list stmt stmt_list TOKEN_DEDENT
   14         | TOKEN_DEF . identifier TOKEN_l_paren typed_var_list TOKEN_r_paren TOKEN_colon TOKEN_NEWLINE TOKEN_INDENT declaration_list stmt stmt_list TOKEN_DEDENT

    TOKEN_IDENTIFIER  shift, and go to state 2

    identifier  go to state 37


State 8

   35 stmt: TOKEN_FOR . identifier TOKEN_IN expr TOKEN_colon block

    TOKEN_IDENTIFIER  shift, and go to state 2

    identifier  go to state 38


State 9

   32 stmt: TOKEN_IF . expr TOKEN_colon block elif_list
   33     | TOKEN_IF . expr TOKEN_colon block TOKEN_ELSE TOKEN_colon block

    TOKEN_INTEGER     shift, and go to state 1
    TOKEN_IDENTIFIER  shift, and go to state 2
    TOKEN_STRING      shift, and go to state 3
    TOKEN_IDSTRING    shift, and go to state 4
    TOKEN_TRUE        shift, and go to state 5
    TOKEN_FALSE       shift, and go to state 6
    TOKEN_NOT         shift, and go to state 10
    TOKEN_NONE        shift, and go to state 13
    TOKEN_minus       shift, and go to state 16
    TOKEN_l_paren     shift, and go to state 17
    TOKEN_l_square    shift, and go to state 18

    identifier   go to state 39
    literal      go to state 31
    expr         go to state 40
    binary_expr  go to state 33
    cexpr        go to state 34
    member_expr  go to state 41
    index_expr   go to state 42


State 10

   69 expr: TOKEN_NOT . expr

    TOKEN_INTEGER     shift, and go to state 1
    TOKEN_IDENTIFIER  shift, and go to state 2
    TOKEN_STRING      shift, and go to state 3
    TOKEN_IDSTRING    shift, and go to state 4
    TOKEN_TRUE        shift, and go to state 5
    TOKEN_FALSE       shift, and go to state 6
    TOKEN_NOT         shift, and go to state 10
    TOKEN_NONE        shift, and go to state 13
    TOKEN_minus       shift, and go to state 16
    TOKEN_l_paren     shift, and go to state 17
    TOKEN_l_square    shift, and go to state 18

    identifier   go to state 39
    literal      go to state 31
    expr         go to state 43
    binary_expr  go to state 33
    cexpr        go to state 34
    member_expr  go to state 41
    index_expr   go to state 42


State 11

   44 expr_stmt: TOKEN_RETURN .
   45          | TOKEN_RETURN . expr

    TOKEN_INTEGER     shift, and go to state 1
    TOKEN_IDENTIFIER  shift, and go to state 2
    TOKEN_STRING      shift, and go to state 3
    TOKEN_IDSTRING    shift, and go to state 4
    TOKEN_TRUE        shift, and go to state 5
    TOKEN_FALSE       shift, and go to state 6
    TOKEN_NOT         shift, and go to state 10
    TOKEN_NONE        shift, and go to state 13
    TOKEN_minus       shift, and go to state 16
    TOKEN_l_paren     shift, and go to state 17
    TOKEN_l_square    shift, and go to state 18

    $default  reduce using rule 44 (expr_stmt)

    identifier   go to state 39
    literal      go to state 31
    expr         go to state 44
    binary_expr  go to state 33
    cexpr        go to state 34
    member_expr  go to state 41
    index_expr   go to state 42


State 12

   34 stmt: TOKEN_WHILE . expr TOKEN_colon block

    TOKEN_INTEGER     shift, and go to state 1
    TOKEN_IDENTIFIER  shift, and go to state 2
    TOKEN_STRING      shift, and go to state 3
    TOKEN_IDSTRING    shift, and go to state 4
    TOKEN_TRUE        shift, and go to state 5
    TOKEN_FALSE       shift, and go to state 6
    TOKEN_NOT         shift, and go to state 10
    TOKEN_NONE        shift, and go to state 13
    TOKEN_minus       shift, and go to state 16
    TOKEN_l_paren     shift, and go to state 17
    TOKEN_l_square    shift, and go to state 18

    identifier   go to state 39
    literal      go to state 31
    expr         go to state 45
    binary_expr  go to state 33
    cexpr        go to state 34
    member_expr  go to state 41
    index_expr   go to state 42


State 13

   62 literal: TOKEN_NONE .

    $default  reduce using rule 62 (literal)


State 14

    7 class_def: TOKEN_CLASS . identifier TOKEN_l_paren identifier TOKEN_r_paren TOKEN_colon TOKEN_NEWLINE TOKEN_INDENT class_helper TOKEN_DEDENT

    TOKEN_IDENTIFIER  shift, and go to state 2

    identifier  go to state 46


State 15

   42 expr_stmt: TOKEN_PASS .

    $default  reduce using rule 42 (expr_stmt)


State 16

   94 cexpr: TOKEN_minus . cexpr

    TOKEN_INTEGER     shift, and go to state 1
    TOKEN_IDENTIFIER  shift, and go to state 2
    TOKEN_STRING      shift, and go to state 3
    TOKEN_IDSTRING    shift, and go to state 4
    TOKEN_TRUE        shift, and go to state 5
    TOKEN_FALSE       shift, and go to state 6
    TOKEN_NONE        shift, and go to state 13
    TOKEN_minus       shift, and go to state 16
    TOKEN_l_paren     shift, and go to state 17
    TOKEN_l_square    shift, and go to state 18

    identifier   go to state 39
    literal      go to state 31
    cexpr        go to state 47
    member_expr  go to state 41
    index_expr   go to state 42


State 17

   77 cexpr: TOKEN_l_paren . expr TOKEN_r_paren

    TOKEN_INTEGER     shift, and go to state 1
    TOKEN_IDENTIFIER  shift, and go to state 2
    TOKEN_STRING      shift, and go to state 3
    TOKEN_IDSTRING    shift, and go to state 4
    TOKEN_TRUE        shift, and go to state 5
    TOKEN_FALSE       shift, and go to state 6
    TOKEN_NOT         shift, and go to state 10
    TOKEN_NONE        shift, and go to state 13
    TOKEN_minus       shift, and go to state 16
    TOKEN_l_paren     shift, and go to state 17
    TOKEN_l_square    shift, and go to state 18

    identifier   go to state 39
    literal      go to state 31
    expr         go to state 48
    binary_expr  go to state 33
    cexpr        go to state 34
    member_expr  go to state 41
    index_expr   go to state 42


State 18

   76 cexpr: TOKEN_l_square . list_expr TOKEN_r_square

    TOKEN_INTEGER     shift, and go to state 1
    TOKEN_IDENTIFIER  shift, and go to state 2
    TOKEN_STRING      shift, and go to state 3
    TOKEN_IDSTRING    shift, and go to state 4
    TOKEN_TRUE        shift, and go to state 5
    TOKEN_FALSE       shift, and go to state 6
    TOKEN_NOT         shift, and go to state 10
    TOKEN_NONE        shift, and go to state 13
    TOKEN_minus       shift, and go to state 16
    TOKEN_l_paren     shift, and go to state 17
    TOKEN_l_square    shift, and go to state 18

    $default  reduce using rule 95 (list_expr)

    identifier   go to state 39
    literal      go to state 31
    expr         go to state 49
    binary_expr  go to state 33
    cexpr        go to state 34
    list_expr    go to state 50
    member_expr  go to state 41
    index_expr   go to state 42


State 19

    0 $accept: program . $end

    $end  shift, and go to state 51


State 20

    4 program: stmt_list .

    $default  reduce using rule 4 (program)


State 21

    3 program: class_def . program

    TOKEN_INTEGER     shift, and go to state 1
    TOKEN_IDENTIFIER  shift, and go to state 2
    TOKEN_STRING      shift, and go to state 3
    TOKEN_IDSTRING    shift, and go to state 4
    TOKEN_TRUE        shift, and go to state 5
    TOKEN_FALSE       shift, and go to state 6
    TOKEN_DEF         shift, and go to state 7
    TOKEN_FOR         shift, and go to state 8
    TOKEN_IF          shift, and go to state 9
    TOKEN_NOT         shift, and go to state 10
    TOKEN_RETURN      shift, and go to state 11
    TOKEN_WHILE       shift, and go to state 12
    TOKEN_NONE        shift, and go to state 13
    TOKEN_CLASS       shift, and go to state 14
    TOKEN_PASS        shift, and go to state 15
    TOKEN_minus       shift, and go to state 16
    TOKEN_l_paren     shift, and go to state 17
    TOKEN_l_square    shift, and go to state 18

    $default  reduce using rule 5 (stmt_list)

    program           go to state 52
    stmt_list         go to state 20
    class_def         go to state 21
    func_def          go to state 22
    typed_var         go to state 23
    identifier        go to state 24
    var_def           go to state 25
    stmt              go to state 26
    expr_stmt         go to state 27
    varAssignStmt     go to state 28
    memberAssignStmt  go to state 29
    indexAssignStmt   go to state 30
    literal           go to state 31
    expr              go to state 32
    binary_expr       go to state 33
    cexpr             go to state 34
    member_expr       go to state 35
    index_expr        go to state 36


State 22

    2 program: func_def . program

    TOKEN_INTEGER     shift, and go to state 1
    TOKEN_IDENTIFIER  shift, and go to state 2
    TOKEN_STRING      shift, and go to state 3
    TOKEN_IDSTRING    shift, and go to state 4
    TOKEN_TRUE        shift, and go to state 5
    TOKEN_FALSE       shift, and go to state 6
    TOKEN_DEF         shift, and go to state 7
    TOKEN_FOR         shift, and go to state 8
    TOKEN_IF          shift, and go to state 9
    TOKEN_NOT         shift, and go to state 10
    TOKEN_RETURN      shift, and go to state 11
    TOKEN_WHILE       shift, and go to state 12
    TOKEN_NONE        shift, and go to state 13
    TOKEN_CLASS       shift, and go to state 14
    TOKEN_PASS        shift, and go to state 15
    TOKEN_minus       shift, and go to state 16
    TOKEN_l_paren     shift, and go to state 17
    TOKEN_l_square    shift, and go to state 18

    $default  reduce using rule 5 (stmt_list)

    program           go to state 53
    stmt_list         go to state 20
    class_def         go to state 21
    func_def          go to state 22
    typed_var         go to state 23
    identifier        go to state 24
    var_def           go to state 25
    stmt              go to state 26
    expr_stmt         go to state 27
    varAssignStmt     go to state 28
    memberAssignStmt  go to state 29
    indexAssignStmt   go to state 30
    literal           go to state 31
    expr              go to state 32
    binary_expr       go to state 33
    cexpr             go to state 34
    member_expr       go to state 35
    index_expr        go to state 36


State 23

   30 var_def: typed_var . TOKEN_equal literal TOKEN_NEWLINE

    TOKEN_equal  shift, and go to state 54


State 24

   23 typed_var: identifier . TOKEN_colon type
   46 varAssignStmt: identifier . TOKEN_equal assign_expr
   47              | identifier . TOKEN_equal expr
   74 cexpr: identifier .
   81      | identifier . TOKEN_l_paren list_expr TOKEN_r_paren

    TOKEN_equal    shift, and go to state 55
    TOKEN_l_paren  shift, and go to state 56
    TOKEN_colon    shift, and go to state 57

    $default  reduce using rule 74 (cexpr)


State 25

    1 program: var_def . program

    TOKEN_INTEGER     shift, and go to state 1
    TOKEN_IDENTIFIER  shift, and go to state 2
    TOKEN_STRING      shift, and go to state 3
    TOKEN_IDSTRING    shift, and go to state 4
    TOKEN_TRUE        shift, and go to state 5
    TOKEN_FALSE       shift, and go to state 6
    TOKEN_DEF         shift, and go to state 7
    TOKEN_FOR         shift, and go to state 8
    TOKEN_IF          shift, and go to state 9
    TOKEN_NOT         shift, and go to state 10
    TOKEN_RETURN      shift, and go to state 11
    TOKEN_WHILE       shift, and go to state 12
    TOKEN_NONE        shift, and go to state 13
    TOKEN_CLASS       shift, and go to state 14
    TOKEN_PASS        shift, and go to state 15
    TOKEN_minus       shift, and go to state 16
    TOKEN_l_paren     shift, and go to state 17
    TOKEN_l_square    shift, and go to state 18

    $default  reduce using rule 5 (stmt_list)

    program           go to state 58
    stmt_list         go to state 20
    class_def         go to state 21
    func_def          go to state 22
    typed_var         go to state 23
    identifier        go to state 24
    var_def           go to state 25
    stmt              go to state 26
    expr_stmt         go to state 27
    varAssignStmt     go to state 28
    memberAssignStmt  go to state 29
    indexAssignStmt   go to state 30
    literal           go to state 31
    expr              go to state 32
    binary_expr       go to state 33
    cexpr             go to state 34
    member_expr       go to state 35
    index_expr        go to state 36


State 26

    6 stmt_list: stmt . stmt_list

    TOKEN_INTEGER     shift, and go to state 1
    TOKEN_IDENTIFIER  shift, and go to state 2
    TOKEN_STRING      shift, and go to state 3
    TOKEN_IDSTRING    shift, and go to state 4
    TOKEN_TRUE        shift, and go to state 5
    TOKEN_FALSE       shift, and go to state 6
    TOKEN_FOR         shift, and go to state 8
    TOKEN_IF          shift, and go to state 9
    TOKEN_NOT         shift, and go to state 10
    TOKEN_RETURN      shift, and go to state 11
    TOKEN_WHILE       shift, and go to state 12
    TOKEN_NONE        shift, and go to state 13
    TOKEN_PASS        shift, and go to state 15
    TOKEN_minus       shift, and go to state 16
    TOKEN_l_paren     shift, and go to state 17
    TOKEN_l_square    shift, and go to state 18

    $default  reduce using rule 5 (stmt_list)

    stmt_list         go to state 59
    identifier        go to state 60
    stmt              go to state 26
    expr_stmt         go to state 27
    varAssignStmt     go to state 28
    memberAssignStmt  go to state 29
    indexAssignStmt   go to state 30
    literal           go to state 31
    expr              go to state 32
    binary_expr       go to state 33
    cexpr             go to state 34
    member_expr       go to state 35
    index_expr        go to state 36


State 27

   31 stmt: expr_stmt . TOKEN_NEWLINE

    TOKEN_NEWLINE  shift, and go to state 61


State 28

   36 stmt: varAssignStmt . TOKEN_NEWLINE

    TOKEN_NEWLINE  shift, and go to state 62


State 29

   37 stmt: memberAssignStmt . TOKEN_NEWLINE

    TOKEN_NEWLINE  shift, and go to state 63


State 30

   38 stmt: indexAssignStmt . TOKEN_NEWLINE

    TOKEN_NEWLINE  shift, and go to state 64


State 31

   75 cexpr: literal .

    $default  reduce using rule 75 (cexpr)


State 32

   43 expr_stmt: expr .
   71 expr: expr . TOKEN_IF expr TOKEN_ELSE expr
   72 binary_expr: expr . TOKEN_AND expr
   73            | expr . TOKEN_OR expr

    TOKEN_AND  shift, and go to state 65
    TOKEN_IF   shift, and go to state 66
    TOKEN_OR   shift, and go to state 67

    $default  reduce using rule 43 (expr_stmt)


State 33

   70 expr: binary_expr .

    $default  reduce using rule 70 (expr)


State 34

   68 expr: cexpr .
   82 cexpr: cexpr . TOKEN_plus cexpr
   83      | cexpr . TOKEN_minus cexpr
   84      | cexpr . TOKEN_star cexpr
   85      | cexpr . TOKEN_slash cexpr
   86      | cexpr . TOKEN_percent cexpr
   87      | cexpr . TOKEN_equalequal cexpr
   88      | cexpr . TOKEN_exclaimequal cexpr
   89      | cexpr . TOKEN_lessequal cexpr
   90      | cexpr . TOKEN_greaterequal cexpr
   91      | cexpr . TOKEN_less cexpr
   92      | cexpr . TOKEN_greater cexpr
   93      | cexpr . TOKEN_IS cexpr
   98 member_expr: cexpr . TOKEN_period identifier
   99 index_expr: cexpr . TOKEN_l_square expr TOKEN_r_square

    TOKEN_IS            shift, and go to state 68
    TOKEN_plus          shift, and go to state 69
    TOKEN_minus         shift, and go to state 70
    TOKEN_star          shift, and go to state 71
    TOKEN_slash         shift, and go to state 72
    TOKEN_percent       shift, and go to state 73
    TOKEN_less          shift, and go to state 74
    TOKEN_greater       shift, and go to state 75
    TOKEN_lessequal     shift, and go to state 76
    TOKEN_greaterequal  shift, and go to state 77
    TOKEN_equalequal    shift, and go to state 78
    TOKEN_exclaimequal  shift, and go to state 79
    TOKEN_l_square      shift, and go to state 80
    TOKEN_period        shift, and go to state 81

    $default  reduce using rule 68 (expr)


State 35

   48 memberAssignStmt: member_expr . TOKEN_equal assign_expr
   49                 | member_expr . TOKEN_equal expr
   78 cexpr: member_expr .
   80      | member_expr . TOKEN_l_paren list_expr TOKEN_r_paren

    TOKEN_equal    shift, and go to state 82
    TOKEN_l_paren  shift, and go to state 83

    $default  reduce using rule 78 (cexpr)


State 36

   50 indexAssignStmt: index_expr . TOKEN_equal assign_expr
   51                | index_expr . TOKEN_equal expr
   79 cexpr: index_expr .

    TOKEN_equal  shift, and go to state 84

    $default  reduce using rule 79 (cexpr)


State 37

   13 func_def: TOKEN_DEF identifier . TOKEN_l_paren typed_var_list TOKEN_r_paren TOKEN_rarrow type TOKEN_colon TOKEN_NEWLINE TOKEN_INDENT declaration_list stmt stmt_list TOKEN_DEDENT
   14         | TOKEN_DEF identifier . TOKEN_l_paren typed_var_list TOKEN_r_paren TOKEN_colon TOKEN_NEWLINE TOKEN_INDENT declaration_list stmt stmt_list TOKEN_DEDENT

    TOKEN_l_paren  shift, and go to state 85


State 38

   35 stmt: TOKEN_FOR identifier . TOKEN_IN expr TOKEN_colon block

    TOKEN_IN  shift, and go to state 86


State 39

   74 cexpr: identifier .
   81      | identifier . TOKEN_l_paren list_expr TOKEN_r_paren

    TOKEN_l_paren  shift, and go to state 56

    $default  reduce using rule 74 (cexpr)


State 40

   32 stmt: TOKEN_IF expr . TOKEN_colon block elif_list
   33     | TOKEN_IF expr . TOKEN_colon block TOKEN_ELSE TOKEN_colon block
   71 expr: expr . TOKEN_IF expr TOKEN_ELSE expr
   72 binary_expr: expr . TOKEN_AND expr
   73            | expr . TOKEN_OR expr

    TOKEN_AND    shift, and go to state 65
    TOKEN_IF     shift, and go to state 66
    TOKEN_OR     shift, and go to state 67
    TOKEN_colon  shift, and go to state 87


State 41

   78 cexpr: member_expr .
   80      | member_expr . TOKEN_l_paren list_expr TOKEN_r_paren

    TOKEN_l_paren  shift, and go to state 83

    $default  reduce using rule 78 (cexpr)


State 42

   79 cexpr: index_expr .

    $default  reduce using rule 79 (cexpr)


State 43

   69 expr: TOKEN_NOT expr .
   71     | expr . TOKEN_IF expr TOKEN_ELSE expr
   72 binary_expr: expr . TOKEN_AND expr
   73            | expr . TOKEN_OR expr

    $default  reduce using rule 69 (expr)


State 44

   45 expr_stmt: TOKEN_RETURN expr .
   71 expr: expr . TOKEN_IF expr TOKEN_ELSE expr
   72 binary_expr: expr . TOKEN_AND expr
   73            | expr . TOKEN_OR expr

    TOKEN_AND  shift, and go to state 65
    TOKEN_IF   shift, and go to state 66
    TOKEN_OR   shift, and go to state 67

    $default  reduce using rule 45 (expr_stmt)


State 45

   34 stmt: TOKEN_WHILE expr . TOKEN_colon block
   71 expr: expr . TOKEN_IF expr TOKEN_ELSE expr
   72 binary_expr: expr . TOKEN_AND expr
   73            | expr . TOKEN_OR expr

    TOKEN_AND    shift, and go to state 65
    TOKEN_IF     shift, and go to state 66
    TOKEN_OR     shift, and go to state 67
    TOKEN_colon  shift, and go to state 88


State 46

    7 class_def: TOKEN_CLASS identifier . TOKEN_l_paren identifier TOKEN_r_paren TOKEN_colon TOKEN_NEWLINE TOKEN_INDENT class_helper TOKEN_DEDENT

    TOKEN_l_paren  shift, and go to state 89


State 47

   82 cexpr: cexpr . TOKEN_plus cexpr
   83      | cexpr . TOKEN_minus cexpr
   84      | cexpr . TOKEN_star cexpr
   85      | cexpr . TOKEN_slash cexpr
   86      | cexpr . TOKEN_percent cexpr
   87      | cexpr . TOKEN_equalequal cexpr
   88      | cexpr . TOKEN_exclaimequal cexpr
   89      | cexpr . TOKEN_lessequal cexpr
   90      | cexpr . TOKEN_greaterequal cexpr
   91      | cexpr . TOKEN_less cexpr
   92      | cexpr . TOKEN_greater cexpr
   93      | cexpr . TOKEN_IS cexpr
   94      | TOKEN_minus cexpr .
   98 member_expr: cexpr . TOKEN_period identifier
   99 index_expr: cexpr . TOKEN_l_square expr TOKEN_r_square

    TOKEN_star      shift, and go to state 71
    TOKEN_slash     shift, and go to state 72
    TOKEN_percent   shift, and go to state 73
    TOKEN_l_square  shift, and go to state 80
    TOKEN_period    shift, and go to state 81

    $default  reduce using rule 94 (cexpr)


State 48
